Bug 318663 - Esc key when filtering contacts does not reset filter model
Summary: Esc key when filtering contacts does not reset filter model
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.6.1
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-21 11:47 UTC by Martin Klapetek
Modified: 2013-04-21 11:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2013-04-21 11:47:08 UTC
When there is active filtering of contacts and esc key is pressed, it clears the typed text, but the model filter is not cleared and still keeps the previous filter string.
Comment 1 Martin Klapetek 2013-04-21 11:49:29 UTC
Git commit 0f4f0c491ccd77a069a2ee49839779412865b4c4 by Martin Klapetek.
Committed on 21/04/2013 at 13:48.
Pushed by mklapetek into branch 'kde-telepathy-0.6'.

Handle pressing Esc key in the filter bar

Pressing Esc key changes the text programatically, which textEdited()
does not handle. Instead we use textChanged() which does handle
programatically changed text, including pressing Esc key.

Reviewed-by: David Edmundson
FIXED-IN: 0.6.2

M  +1    -1    filter-bar.cpp

http://commits.kde.org/telepathy-contact-list/0f4f0c491ccd77a069a2ee49839779412865b4c4