Handle pressing Esc key in the filter bar

Pressing Esc key changes the text programatically, which textEdited()
does not handle. Instead we use textChanged() which does handle
programatically changed text, including pressing Esc key.

Reviewed-by: David Edmundson
BUG: 318663
FIXED-IN: 0.6.2